--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Zetsy - Handmade</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
   </head>
 
@@ -11,9 +12,9 @@
     <div class="wrapper">
       <!-- your code here! -->
       <header>
-        <h1>Zetsy</h1>
+        <h1 id="title"><a href="#">Zetsy</a></h1>
       </header>
-      <img src="images/necklace.jpg" alt="necklace">
+      <img class="bordered-image" src="images/necklace.jpg" alt="necklace">
 
       <section>
       <h2>About</h2>
@@ -32,15 +33,15 @@
       <section>
       <h2>Press</h2>
       <!-- press images -->
-      <div class="press-images">
+      <div id="press-images">
         <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" alt="nmai-logo"> </a>
-        <a href="http://www.nytimes.com/pages/t-magazine/"> <img src="images/times-logo.png" alt="times-logo"> </a>
-        <a href="http://www.sedonamonthly.com"> <img src="images/sedona-logo.png" alt="sedona-logo"> </a>
+        <a href="http://www.nytimes.com/pages/t-magazine/"> <img src="images/times-logo.png" alt="times-logo"></a>
+        <a href="http://www.sedonamonthly.com"> <img src="images/sedona-logo.png" alt="sedona-logo"></a>
         <a href="http://www.bergdorfgoodman.com/"> <img src="images/bergdorf-logo.png" alt="bergdorf-logo"> </a>
       </div>
 
       <footer>
-        <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+        <p class="copyright">&copy; 2014 Zetsy, All Rights Reserved.</p>
       </footer>
       </div>
     </div>
